--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
         }
     },
     "require": {
-        "illuminate/database": "^7.30"
+        "illuminate/database": "^7.30",
+        "laminas/laminas-diactoros": "^2.4",
+        "zendframework/zend-diactoros": "^2.2",
+        "aura/router": "^3.1",
+        "twig/twig": "^3.3",
+        "respect/validation": "^2.0"
     }
 }
